--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,40 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              {
+    "glob": "**/*",
+    "input": "src/assets",
+    "output": "/assets"
+  }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/plugins/css/bootstrap.min.css",
+              "src/assets/icons/font-awesome-4.7.0/css/font-awesome.min.css",
+              "src/assets/plugins/css/animate.css",
+              "src/assets/plugins/css/owl.css",
+              "src/assets/plugins/css/jquery.fancybox.min.css",
+              "src/assets/css/styles.css",
+              "src/assets/css/responsive.css",
+              "src/assets/css/colors/defauld.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/plugins/js/jquery.min.js",
+  "src/assets/plugins/js/popper.min.js",
+  "src/assets/plugins/js/bootstrap.min.js",
+  "src/assets/plugins/js/owl.carousel.js",
+  "src/assets/plugins/js/validator.min.js",
+  "src/assets/plugins/js/wow.min.js",
+  "src/assets/plugins/js/jquery.mixitup.min.js",
+  "src/assets/plugins/js/circle-progress.js",
+  "src/assets/plugins/js/jquery.nav.js",
+  "src/assets/plugins/js/jquery.fancybox.min.js",
+  "src/assets/plugins/js/isotope.pkgd.js",
+  "src/assets/plugins/js/packery-mode.pkgd.js",
+  "src/assets/js/map-init.js",
+  "src/assets/js/custom-scripts.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -92,5 +120,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
